--- a/client/src/app/cart/cart.component.html
+++ b/client/src/app/cart/cart.component.html
@@ -6,7 +6,7 @@
       <ng-container *ngIf="items.length > 0; else empty">
         <div class="cart-item-block-holder" *ngFor="let item of items">
           <div class="cart-item-block">
-            <div class="item-img">
+            <div class="item-img" routerLink="/product/{{ item.product_name }}">
               <img
                 [src]="'../../../assets/img/' + item.src"
                 [alt]="item.product_name"
