--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -28,8 +28,11 @@
   --dark-grey-transparent: #979797c5;
   --white: #ffffff;
   --dark-white: #c5c5c5;
+  --dark-golden: #d0b000;
   --golden: #ffd700;
+  --light-golden: #ffe656;
   --green: #00d998;
+  --light-green: #c0ffec;
   --red: #e94444;
   --red-transparent: #e94444c5;
   --dark-red: #c53c3c;
