Added compatible items

--- a/client/src/app/product-page/product-page.component.html
+++ b/client/src/app/product-page/product-page.component.html
@@ -8,6 +8,6 @@
     </div>
   </div>
   <div class="product-bottom">
-    <app-related-items></app-related-items>
+    <app-related-items [product]="product"></app-related-items>
   </div>
 </div>
