Wokring on simple animations

--- a/client/src/app/home/cover/cover.component.html
+++ b/client/src/app/home/cover/cover.component.html
@@ -1,5 +1,5 @@
 <div id="home-cover" class="wrapper padding-section">
-  <div id="cover-img">
+  <div id="cover-img" class="hidden-el">
     <div id="cover-img-1">
       <img
         src="../../../assets/img/Megaport PC Gamer_Cover.png"
@@ -14,11 +14,13 @@
     </div>
   </div>
   <div id="cover-info">
-    <h1 id="cover-hero">Your One-Stop Destination for PC Solutions.</h1>
-    <h2 id="cover-tag-line">
+    <h1 id="cover-hero" class="hidden-el">
+      Your One-Stop Destination for PC Solutions.
+    </h1>
+    <h2 id="cover-tag-line" class="hidden-el">
       Empowering Your Computing Journey: Unleash Limitless Possibilities with
       Our Premier PC Solutions and Expert Guidance.
     </h2>
-    <a routerLink="/shop" id="cover-btn" class="a-btn">Shop now!</a>
+    <a routerLink="/shop" id="cover-btn" class="a-btn hidden-el">Shop now!</a>
   </div>
 </div>
