--- a/client/src/app/our-company/repair-service/repair-service.component.html
+++ b/client/src/app/our-company/repair-service/repair-service.component.html
@@ -1,7 +1,7 @@
 <div id="repair-service" class="wrapper padding-section">
-  <h2>Our repair service</h2>
+  <h2 class="hidden-el hide-scale-in">Our repair service</h2>
   <hr class="style-1" />
-  <div id="service-table-holder">
+  <div id="service-table-holder" class="hidden-el hide-scale-in">
     <ng-container *ngIf="repairServices.length > 0; else noServices">
       <table id="service-table">
         <thead>
