--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -119,6 +119,22 @@ p {
   transform: translateY(8rem);
 }
 
+.hide-scale-in {
+  transform: scale(0);
+  opacity: 0;
+  transition: all 0.6s;
+}
+
+.hide-bottom {
+  transform: translateY(8rem);
+  opacity: 0;
+}
+
+.show-el {
+  transform: scale(1) translateY(0);
+  opacity: 1;
+}
+
 /* LOADING SPINNER */
 .loading-spinner-container {
   position: fixed;
